BPER/DEVF/force-app/main/default/objects/Wallet_History__c/Wallet_History__c.object-meta.xml
<CustomObject>
    <description>Storico Portafogli NDG pregresso</description>
    <label>Tracking NDG</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>NDG</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tracking NDG</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>