BPER/DEVF/force-app/main/default/objects/Wallet_History__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Tracking NDG</relationshipLabel>
    <relationshipName>Tracking_NDG</relationshipName>
    <type>Lookup</type>
</CustomField>