BPER/DEVF/force-app/main/default/objects/Wallet_History__c/fields/Account_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>Account_ExternalId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Account External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>