BPER/DEVF/force-app/main/default/objects/Wallet_History__c/fields/PTF_A_Portafoglio__c.field-meta.xml
<CustomField>
    <fullName>PTF_A_Portafoglio__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>A Portafoglio</label>
    <length>30</length>
    <type>Text</type>
</CustomField>