BPER/DEVF/force-app/main/default/objects/Wallet_History__c/fields/PTF_ABI__c.field-meta.xml
<CustomField>
    <fullName>PTF_ABI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ABI</label>
    <length>5</length>
    <type>Text</type>
</CustomField>