BPER/DEVF/force-app/main/default/objects/Wallet_History__c/fields/PTF_Da_Filiale__c.field-meta.xml
<CustomField>
    <fullName>PTF_Da_Filiale__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Da Filiale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>