BPER/DEVF/force-app/main/default/objects/Wallet_History__c/fields/PTF_Da_IdCed__c.field-meta.xml
<CustomField>
    <fullName>PTF_Da_IdCed__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Da IdCED</label>
    <length>10</length>
    <type>Text</type>
</CustomField>