BPER/DEVF/force-app/main/default/objects/Wallet_History__c/fields/PTF_Da_Portafoglio__c.field-meta.xml
<CustomField>
    <fullName>PTF_Da_Portafoglio__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Da Portafoglio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>