BPER/DEVF/force-app/main/default/objects/Wallet_History__c/fields/PTF_Data_spostamento__c.field-meta.xml
<CustomField>
    <fullName>PTF_Data_spostamento__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data spostamento</label>
    <type>DateTime</type>
</CustomField>